--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "socket.io": "^4.7.5",
     "unzipper": "^0.12.1",
     "uuid": "^10.0.0"
+    "lucide-react": "^0.263.1"
   },
   "nodemonConfig": {
     "watch": [
