--- a/views/.wappler_folder.json
+++ b/views/.wappler_folder.json
@@ -2,5 +2,9 @@
   "Myprojects.ejs": {
     "layoutPage": "Test",
     "description": ""
+  },
+  "tempHeader.ejs": {
+    "layoutPage": "Test",
+    "description": ""
   }
 }
