--- a/views/.wappler_folder.json
+++ b/views/.wappler_folder.json
@@ -18,5 +18,9 @@
   "Projects.ejs": {
     "layoutPage": "main",
     "description": ""
+  },
+  "Login.ejs": {
+    "layoutPage": "main",
+    "description": ""
   }
 }
